--- a/www/main.css
+++ b/www/main.css
@@ -135,4 +135,8 @@ a:hover {
         font-style:italic;
 }
 
-
+.PY_KEYWORD{ color: #0000C0; font-weight: bold; }
+.PY_COMMENT{ color: #000080; }
+.PY_PARAMETER{ color: #C00000; }
+.PY_IDENTIFIER{ color: #C00000; font-weight: bold; }
+.PY_STRING{ color: #008000; }
