*** empty log message ***
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@789 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/main.css
+++ b/www/main.css
@@ -140,3 +140,7 @@ a:hover {
 .PY_PARAMETER{ color: #C00000; }
 .PY_IDENTIFIER{ color: #C00000; font-weight: bold; }
 .PY_STRING{ color: #008000; }
+
+.example pre {
+        margin-left:0px;
+}
