icons moved to separate directory; download icons in example pages
git-svn-id: https://pyx.svn.sourceforge.net/svnroot/pyx/trunk/pyx@2063 069f4177-920e-0410-937b-c2a4a81bcd90

--- a/www/main.css
+++ b/www/main.css
@@ -190,9 +190,23 @@ a:hover {
         border-bottom: 1px solid #88a;
 }
 
+#content .exampledownloads {
+        float: right;
+}
+
+#content .exampledownload {
+        text-align: center;
+        float: left;
+}
+
+#content .exampledownloadsize {
+        font-size: 8pt;
+}
+
 #content .exampleimage {
         padding-bottom: 15px;
         text-align: center;
+        clear: both;
 }
 
 #content .examplecode {
